stack5.orbit8.com/etc/sysconfig/iptables
# Generated by iptables-save v1.4.21 on Sun Jan  3 23:17:30 2016
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:neutron-filter-top - [0:0]
:neutron-openvswi-FORWARD - [0:0]
:neutron-openvswi-INPUT - [0:0]
:neutron-openvswi-OUTPUT - [0:0]
:neutron-openvswi-local - [0:0]
:neutron-openvswi-sg-chain - [0:0]
:neutron-openvswi-sg-fallback - [0:0]
-A INPUT -s 10.1.10.251/32 -p tcp -m multiport --dports 5666 -m comment --comment "001 nagios-nrpe incoming nagios_nrpe" -j ACCEPT
-A INPUT -j neutron-openvswi-INPUT
-A INPUT -p udp -m multiport --dports 67 -m comment --comment "001 neutron dhcp in incoming neutron_dhcp_in_10.1.13.12" -j ACCEPT
-A INPUT -p udp -m multiport --dports 67 -m comment --comment "001 neutron dhcp in incoming neutron_dhcp_in_10.1.13.15" -j ACCEPT
-A INPUT -s 10.1.13.11/32 -p udp -m multiport --dports 4789 -m comment --comment "001 neutron tunnel port incoming neutron_tunnel_10.1.13.15_10.1.13.11" -j ACCEPT
-A INPUT -s 10.1.13.12/32 -p udp -m multiport --dports 4789 -m comment --comment "001 neutron tunnel port incoming neutron_tunnel_10.1.13.15_10.1.13.12" -j ACCEPT
-A INPUT -s 10.1.13.13/32 -p udp -m multiport --dports 4789 -m comment --comment "001 neutron tunnel port incoming neutron_tunnel_10.1.13.15_10.1.13.13" -j ACCEPT
-A INPUT -s 10.1.13.14/32 -p udp -m multiport --dports 4789 -m comment --comment "001 neutron tunnel port incoming neutron_tunnel_10.1.13.15_10.1.13.14" -j ACCEPT
-A INPUT -s 10.1.13.15/32 -p udp -m multiport --dports 4789 -m comment --comment "001 neutron tunnel port incoming neutron_tunnel_10.1.13.15_10.1.13.15" -j ACCEPT
-A INPUT -s 10.1.10.251/32 -p tcp -m multiport --dports 5900:5999 -m comment --comment "001 nova compute incoming nova_compute" -j ACCEPT
-A INPUT -s 10.1.13.11/32 -p tcp -m multiport --dports 16509,49152:49215 -m comment --comment "001 nova qemu migration incoming nova_qemu_migration_10.1.13.15_10.1.13.11" -j ACCEPT
-A INPUT -s 10.1.13.12/32 -p tcp -m multiport --dports 16509,49152:49215 -m comment --comment "001 nova qemu migration incoming nova_qemu_migration_10.1.13.15_10.1.13.12" -j ACCEPT
-A INPUT -s 10.1.13.13/32 -p tcp -m multiport --dports 16509,49152:49215 -m comment --comment "001 nova qemu migration incoming nova_qemu_migration_10.1.13.15_10.1.13.13" -j ACCEPT
-A INPUT -s 10.1.13.14/32 -p tcp -m multiport --dports 16509,49152:49215 -m comment --comment "001 nova qemu migration incoming nova_qemu_migration_10.1.13.15_10.1.13.14" -j ACCEPT
-A INPUT -s 10.1.13.15/32 -p tcp -m multiport --dports 16509,49152:49215 -m comment --comment "001 nova qemu migration incoming nova_qemu_migration_10.1.13.15_10.1.13.15" -j ACCEPT
-A FORWARD -i br-ex -m comment --comment "000 forward in" -j ACCEPT
-A FORWARD -o br-ex -m comment --comment "000 forward out" -j ACCEPT
-A FORWARD -j neutron-filter-top
-A FORWARD -j neutron-openvswi-FORWARD
-A OUTPUT -j neutron-filter-top
-A OUTPUT -j neutron-openvswi-OUTPUT
-A OUTPUT -p udp -m multiport --dports 68 -m comment --comment "001 neutron dhcp out outgoing neutron_dhcp_out_10.1.13.12" -j ACCEPT
-A OUTPUT -p udp -m multiport --dports 68 -m comment --comment "001 neutron dhcp out outgoing neutron_dhcp_out_10.1.13.15" -j ACCEPT
-A neutron-filter-top -j neutron-openvswi-local
-A neutron-openvswi-sg-fallback -m comment --comment "Default drop rule for unmatched traffic." -j DROP
COMMIT
# Completed on Sun Jan  3 23:17:30 2016
# Generated by iptables-save v1.4.21 on Sun Jan  3 23:17:30 2016
*raw
:PREROUTING ACCEPT [11423:23662289]
:OUTPUT ACCEPT [10722:942977]
:neutron-openvswi-OUTPUT - [0:0]
:neutron-openvswi-PREROUTING - [0:0]
-A PREROUTING -j neutron-openvswi-PREROUTING
-A OUTPUT -j neutron-openvswi-OUTPUT
COMMIT
# Completed on Sun Jan  3 23:17:30 2016
# Generated by iptables-save v1.4.21 on Sun Jan  3 23:17:30 2016
*nat
:PREROUTING ACCEPT [163:13691]
:INPUT ACCEPT [162:13329]
:OUTPUT ACCEPT [1909:129645]
:POSTROUTING ACCEPT [1909:129645]
:neutron-openvswi-OUTPUT - [0:0]
:neutron-openvswi-POSTROUTING - [0:0]
:neutron-openvswi-PREROUTING - [0:0]
:neutron-openvswi-float-snat - [0:0]
:neutron-openvswi-snat - [0:0]
:neutron-postrouting-bottom - [0:0]
-A PREROUTING -j neutron-openvswi-PREROUTING
-A OUTPUT -j neutron-openvswi-OUTPUT
-A POSTROUTING -s 172.24.4.224/28 -o bond0 -m comment --comment "000 nat" -j MASQUERADE
-A POSTROUTING -j neutron-openvswi-POSTROUTING
-A POSTROUTING -j neutron-postrouting-bottom
-A neutron-openvswi-snat -j neutron-openvswi-float-snat
-A neutron-postrouting-bottom -m comment --comment "Perform source NAT on outgoing traffic." -j neutron-openvswi-snat
COMMIT
# Completed on Sun Jan  3 23:17:30 2016
# Generated by iptables-save v1.4.21 on Sun Jan  3 23:17:30 2016
*mangle
:PREROUTING ACCEPT [11427:23662641]
:INPUT ACCEPT [11426:23662279]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [10726:943329]
:POSTROUTING ACCEPT [10726:943329]
:neutron-openvswi-FORWARD - [0:0]
:neutron-openvswi-INPUT - [0:0]
:neutron-openvswi-OUTPUT - [0:0]
:neutron-openvswi-POSTROUTING - [0:0]
:neutron-openvswi-PREROUTING - [0:0]
:neutron-openvswi-mark - [0:0]
-A PREROUTING -j neutron-openvswi-PREROUTING
-A INPUT -j neutron-openvswi-INPUT
-A FORWARD -j neutron-openvswi-FORWARD
-A OUTPUT -j neutron-openvswi-OUTPUT
-A POSTROUTING -j neutron-openvswi-POSTROUTING
-A neutron-openvswi-PREROUTING -j neutron-openvswi-mark
COMMIT
# Completed on Sun Jan  3 23:17:30 2016
